<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_edit_preview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/imagepreview"
        android:scaleType="centerCrop"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btn_change_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cambiar_imagen"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/et_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_imagen"
        android:inputType="text"/>

    <EditText
        android:id="@+id/et_edit_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/Autor"
        android:inputType="text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_edit_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cambiar_fecha"/>

        <TextView
            android:id="@+id/tv_edit_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>